--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="A multi-sector holdings group across real estate, investing, AI workflows/SaaS, and clothing." />
-  <title>BRICKBRICK Holdings</title>
+  <title>BRICKBRICK Holdings LLC</title>
   <style>
     :root{
       --bg: #0b0f14;
@@ -328,13 +328,13 @@
         <div class="brand-badge">BB</div>
         <div>
           <div style="font-size:14px;">BRICKBRICK Holdings</div>
-          <div style="font-size:12px;color:var(--muted);font-weight:700;">Multi-sector operators</div>
+          <div style="font-size:12px;color:var(--muted);font-weight:700;">tagline</div>
         </div>
       </div>
 
       <nav class="nav-links" aria-label="Primary">
         <a href="#sectors">Sectors</a>
-        <a href="#model">Operating Model</a>
+        <a href="#model">How we operate</a>
         <a href="#team">About</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -351,8 +351,8 @@
     <section class="hero" id="top">
       <div class="hero-grid">
         <div class="hero-card">
-          <div class="eyebrow"><span class="dot"></span> Building durable cashflow + long-term equity</div>
-          <h1>Operators across real estate, investing, AI workflows, and consumer brands.</h1>
+          <div class="eyebrow"><span class="dot"></span> Building cashflow and long-term equity</div>
+          <h1>Working across real estate, investing, AI workflows, and consumer brands.</h1>
           <p class="sub">
             BRICKBRICK Holdings is a multi-sector group focused on acquiring, building, and scaling assets that compound.
             We prioritize disciplined execution, measurable ROI, and strong operating fundamentals.
@@ -370,11 +370,11 @@
             </div>
             <div class="pill" role="listitem">
               <b>Execution-first</b>
-              <span>Prototype → validate → scale</span>
+              <span>somethign -> something -> idk</span>
             </div>
             <div class="pill" role="listitem">
-              <b>Capital discipline</b>
-              <span>Risk-managed growth</span>
+              <b>Capital</b>
+              <span>growth something</span>
             </div>
           </div>
         </div>
@@ -382,18 +382,18 @@
         <aside class="logo-card">
           <div>
             <div style="font-weight:800; letter-spacing:.2px;">Logo</div>
-            <div class="logo-hint">Drop your logo image in the repo and update the code below.</div>
+            <div class="logo-hint">logo here.</div>
           </div>
 
           <div class="logo-slot">
             <div>
-              <div style="font-weight:900; font-size:18px;">[Your Logo Here]</div>
-              <small>Replace this with an <code>&lt;img&gt;</code> tag</small>
+              <div style="font-weight:900; font-size:18px;">[our logo here]</div>
+              <small>Replace with a <code>&lt;img&gt;</code> tag</small>
             </div>
           </div>
 
           <div class="logo-hint">
-            Tip: add <code>assets/logo.png</code> then replace the logo slot with:
+            we add <code>assets/logo.png</code> then replace the logo slot with:
             <br><code>&lt;img src="assets/logo.png" alt="BRICKBRICK logo" style="max-width:100%;max-height:210px;"&gt;</code>
           </div>
         </aside>
@@ -405,7 +405,7 @@
       <div class="section-head">
         <div>
           <h2>Sectors</h2>
-          <p>We build and allocate into verticals where strong operations and smart capital can create asymmetric outcomes.</p>
+          <p>We build and allocate into areas where strong operations and smart capital can create positive outcomes.</p>
         </div>
       </div>
 
@@ -414,7 +414,6 @@
           <h3>Real Estate</h3>
           <p>
             Focused on cash-flowing properties and strategic acquisitions where operational improvements drive value.
-            Emphasis on clean reporting, stable tenants, and durable downside protection.
           </p>
           <div class="tagrow">
             <span class="tag">Cashflow</span>
@@ -440,7 +439,7 @@
           <h3>AI Workflows & SaaS</h3>
           <p>
             We prototype and deploy AI-powered workflows that remove manual work inside businesses. From intake automation
-            to document processing and reporting, we focus on fast ROI and scalable systems.
+            to document processing and reporting.
           </p>
           <div class="tagrow">
             <span class="tag">Automation</span>
@@ -481,10 +480,10 @@
           </p>
           <ul>
             <li><b>Identify</b> a high-ROI opportunity (cashflow or strategic edge).</li>
-            <li><b>Prototype</b> quickly (for AI/SaaS) or validate unit economics (for physical assets).</li>
-            <li><b>Operate</b> with clean reporting, defined owners, and measurable KPIs.</li>
+            <li><b>Prototype</b> quickly or spend time validating economics.</li>
+            <li><b>Operate</b> somethign something idk</li>
             <li><b>Reinvest</b> into scalable systems and durable assets.</li>
-            <li><b>Standardize</b> playbooks so wins can be repeated across businesses.</li>
+            <li><b>Standardize</b> playbooks so wins can be repeated.</li>
           </ul>
         </div>
       </div>
@@ -495,7 +494,7 @@
       <div class="section-head">
         <div>
           <h2>About Us</h2>
-          <p>Four partners building a long-term, execution-focused holdings group.</p>
+          <p>Four senior partners building a long-term, execution-focused holdings group.</p>
         </div>
       </div>
 
@@ -503,29 +502,29 @@
         <div class="card team-card">
           <div class="avatar">A</div>
           <div style="font-weight:800;">Athan</div>
-          <div class="role">Partner</div>
-          <p>Add Athan’s short bio here (focus: ops strengths, domain expertise, or sector leadership).</p>
+          <div class="role">SeniorPartner</div>
+          <p>athan fat</p>
         </div>
 
         <div class="card team-card">
           <div class="avatar">C</div>
           <div style="font-weight:800;">Chris</div>
-          <div class="role">Partner</div>
-          <p>Add Chris’s short bio here (focus: execution, strategy, deal sourcing, or product/brand work).</p>
+          <div class="role">SeniorPartner</div>
+          <p>chris.</p>
         </div>
 
         <div class="card team-card">
           <div class="avatar">J</div>
           <div style="font-weight:800;">Jacob</div>
-          <div class="role">Partner</div>
-          <p>Add Jacob’s short bio here (focus: operations, finance, investing, engineering, or acquisitions).</p>
+          <div class="role">Senior Partner</div>
+          <p>jacob balls</p>
         </div>
 
         <div class="card team-card">
           <div class="avatar">A</div>
           <div style="font-weight:800;">Abhi</div>
-          <div class="role">Partner</div>
-          <p>Add your short bio here (focus: investing, engineering, AI workflows, or strategy).</p>
+          <div class="role">Senior Partner</div>
+          <p>ABHI!!</p>
         </div>
       </div>
     </section>
@@ -555,7 +554,7 @@
           </div>
 
           <p style="color:var(--muted); font-size:12px; margin-top:10px;">
-            This form uses your email client via <code>mailto:</code>. For a real form later, connect Formspree or Netlify Forms.
+            This form uses your email client via <code>mailto:</code>.
           </p>
         </div>
 
@@ -571,7 +570,7 @@
 
           <div style="margin-top:14px; border-top:1px solid var(--line); padding-top:14px; color:var(--muted); font-size:14px;">
             <div style="font-weight:800; color:var(--text); margin-bottom:6px;">Email</div>
-            <div>Replace with your business email: <b>hello@yourdomain.com</b></div>
+            <div>contact@brick-brick.org</div>
           </div>
         </div>
       </div>
@@ -593,7 +592,7 @@
       const topic = document.getElementById("topic").value.trim();
       const message = document.getElementById("message").value.trim();
 
-      const to = "hello@yourdomain.com"; // TODO: replace
+      const to = "contact@brick-brick.org"; // TODO: replace
       const subject = encodeURIComponent(`[BRICKBRICK] ${topic || "Inquiry"} — ${name || "New message"}`);
       const body = encodeURIComponent(
 `Name: ${name}
