--- a/index.html
+++ b/index.html
@@ -387,14 +387,8 @@
 
           <div class="logo-slot">
             <div>
-              <div style="font-weight:900; font-size:18px;">[our logo here]</div>
-              <small>Replace with a <code>&lt;img&gt;</code> tag</small>
+              <img src="assets/logo.png" alt="BRICKBRICK logo" style="max-width:100%;max-height:210px;">
             </div>
-          </div>
-
-          <div class="logo-hint">
-            we add <code>assets/logo.png</code> then replace the logo slot with:
-            <br><code>&lt;img src="assets/logo.png" alt="BRICKBRICK logo" style="max-width:100%;max-height:210px;"&gt;</code>
           </div>
         </aside>
       </div>
