--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="A multi-sector holdings group across real estate, investing, AI workflows/SaaS, and clothing." />
+  <meta name="description" content="A multi-sector holdings group across real estate, investing, b2b, and consumer brands." />
   <title>BRICKBRICK Holdings LLC</title>
   <style>
     :root{
@@ -328,7 +328,7 @@
         <div class="brand-badge">BB</div>
         <div>
           <div style="font-size:14px;">BRICKBRICK Holdings</div>
-          <div style="font-size:12px;color:var(--muted);font-weight:700;">tagline</div>
+          <div style="font-size:12px;color:var(--muted);font-weight:700;">Building wealth brick by brick</div>
         </div>
       </div>
 
@@ -381,9 +381,9 @@
 
         <aside class="logo-card">
           <div class="logo-slot">
-            <div>
+            
               <img src="assets/logo.png" alt="BRICKBRICK logo" style="max-width:100%;max-height:210px;">
-            </div>
+            
           </div>
         </aside>
       </div>
@@ -489,16 +489,16 @@
 
       <div class="grid">
         <div class="card team-card">
-          <div class="avatar">A</div>
+          <div class="avatar"><img src="assets/athanheadshot.jpg" alt="Athan headshot"></div>
           <div style="font-weight:800;">Athan</div>
-          <div class="role">SeniorPartner</div>
+          <div class="role">Senior Partner</div>
           <p>athan fat</p>
         </div>
 
         <div class="card team-card">
           <div class="avatar">C</div>
           <div style="font-weight:800;">Chris</div>
-          <div class="role">SeniorPartner</div>
+          <div class="role">Senior Partner</div>
           <p>chris.</p>
         </div>
 
